app/assets/stylesheets/_posts_projects.css.scss
.div {
  height: 200px;
  width: 100%;
  overflow: hidden;
  z-index: 0;
  position: absolute;
}

.post_image {
  height: 220px;
   position: absolute;
  background-position: center;
  width: 105%;
  margin-left: -10px;
  margin-top: -10px;
  background-size: cover;
  position: absolute;
  -webkit-filter: blur(2px);
  z-index: 0;
  -moz-filter: blur(2px);
  -o-filter: blur(2px);
  -ms-filter: blur(2px);
  filter: blur(2px);
}

.flex_wrapper_content {
  display: flex;
  flex-direction: row;
  .post_wrapper {
    flex-grow: 5;
    max-width: 100%;
  }
}

.articles {
  .title {
    border-bottom: 1px dotted #9a9da4;
  }
  .title, .title a {
    color: #65B19D;
    margin-bottom:  10px;
    padding-bottom: 10px;
    text-shadow: 0.5px 0.5px #191919;
    font-family: 'Roboto Condensed Bold', sans-serif;
    text-decoration: none;
  }
  figure {
    margin: 0 !important;
  }
  .flex_other_articles {
    display: flex;
    flex-direction: column;
    .ctgry_article {
      display: flex;
      flex-direction: row;
      margin: 10px 0;
      img {
        width: 130px;
        height: 80px;
        object-fit: cover;
        z-index: 1;
        position: relative;
        -moz-transition: all 0.3s;
        -webkit-transition: all 0.3s;
        transition: all 0.3s;
        background-size: cover;
      }
      p {
        font-size: 1em;
        margin: 0;
        margin-left: 10px;
        line-height: 18px;
        font-family: 'Roboto Condensed Bold', sans-serif;
        font-style: italic;
        a {
          color: #191919;
          text-decoration: none;
        }
      }
    }
  }
}

.comment_form_wrapper {
  display: block !important;
  margin-top: 20px;
  img {
    position: absolute;
  }
}

.comment_form_wrapper, .reply_form_wrapper {
  padding: 0;
  form {
    padding: 10px 0 0 45px !important;
    position: relative;
    max-width: 100% !important;
  }
  #comment_field {
    outline: 0;
    margin: 0 !important;
    border-width: 2px !important;
    border-color: #E9E9E9;
    padding: 5px !important;
    border-radius: 5px;
    min-height: 96px;
    height: 96px;
  }
  #comment_field:focus {
    border-color: #65B19D;
  }
}

.share_article_feedback {
  h3 {
    margin: 0;
    font-family: 'Playfair Display';
  }
  .comments {
    #anchor_link:hover, #anchor_link:hover i {
      color: #212529 !important;
      transition: color 0.6s ease !important;
      cursor: pointer;
    }
    .fa-quote {
      font-size: 10px;
      color: #A6A09E;
    }
    .reply_form_wrapper {
       display: none;
     }
    .submit_comment {
      width: 35px;
      height: 35px;
      border: none;
      padding: 0;
      float: right;
      background-image: url("post_comment.png");
      background-size: contain;
      background-repeat: no-repeat;
      margin-bottom: 10px;
      &:hover {
        cursor: pointer;
      }
    }
    i {
      line-height: 1.5;
      color: black;
    }
    ul {
      padding-left: 0;
      margin: 0;
      width: 100%;
      position: relative;
      li {
        padding: 8px 0;
        font-size: 14px;
        margin-right: 0;
        span {
          word-wrap: break-word;
        }
        h6 {
          margin: 0;
          line-height: 1.5;
          font-size: 12px;
          a {
            color: black !important;
          }
        }
        .date_ago {
          font-size: 12px;
        }
        #toggle:hover {
          cursor: pointer;
        }
      }
      .delete_btn_x {
        width: 15px !important;
        right: 0;
        position: absolute;
        z-index: 10;
      }
    }
    a {
      text-decoration: none;
      height: fit-content;
    }
  }
}

.text_field {
  outline: 0;
  border-width: 0 0 2px !important;
  border-color: #E9E9E9;
  margin: 0 !important;
  padding: 5px !important;
}
.text_field:focus {
  border-color: #65B19D;
}

.post_apply h3, a {
  font-family: "Playfair Display";
  color: black;
}

.post_apply {
  padding: 15px;
  .ads_wrapper {
    margin-bottom: 20px;
  }
}

.share_article_feedback {
  padding: 30px;
}

.post_apply, .share_article_feedback {
  display: flex;
  flex-direction: column;
  background-color: white;
  min-width: 330px;
  max-width: 330px;
  z-index: 30;
  margin-top: 140px;
  margin-left: 20px;
  img {
    width: 100%;
  }
}

.flex_wrapper_posts {
  max-width: 1300px;
  margin: 0 auto;
}

.flex_wrapper_columns {
  display: flex;
  flex-direction: row;
  margin: 0 auto;
}

.content_wrapper {
  max-width: 736px;
}

.skinny {
  margin-left: 100px;
  margin-right: 100px;
  flex-grow: 1;
  max-width: 100%;
}

#posts_wrapper {
  .post {
    text-align: center;
    .date {
      font-size: .9em;
      margin: 0;
    }
    h2 {
      margin: 0;
      font-size: 2em;
      text-transform: uppercase;
      a {
        font-weight: bold;
        text-decoration: none;
        color: #424653;
        &:hover {
          color: #65B19D;
        }
      }
    }
  }
}

iframe { margin: 1em auto;  display: block; }

#post_title_show {
  z-index: 100;
  background-color: white;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
  display: block;
  position: relative;
  z-index: 0;
  padding: 10px 40px 0 40px;

  #category_title a {
    font-family: "Roboto Condensed Light";
    color: #212529;
    margin-bottom: .5rem !important;
    &:hover {
      text-decoration: none;
      color: inherit;
    }
  }

  .authors {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

  .one_author {
    display: flex;
    flex-direction: row;
  }

  h1 {
    margin-top: 30px;
    margin-bottom: 15px;
    color: #65B19D;
    text-shadow: 1px 1px #191919;
    font-size: 50px;
    font-family: 'Roboto Condensed Bold', sans-serif;
  }
  h3 a {
    font-size: 15px;
    font-family: 'Roboto Condensed Bold', sans-serif;
    margin: 0;
    margin-top: 23px;
    font-weight: lighter;
    text-transform: uppercase;
    a {
      text-decoration: none;
      color: #333;
    }
  }
}

// --------------- Posts Show

#cke_1_contents {
  min-height: 500px !important;
}

#content {
   padding: 0 40px;
   .post_content {
     br {
       display: none;
     }
     padding-bottom: 20px;
     img {
       width: 70% !important;
       height: auto !important;
       margin: 25px auto !important;
       display: block;
     }
     iframe {
        margin: 1em auto !important;
    }
    html {
       margin-left: auto;
       margin-right: auto;
     }
      #twitter-widget-0, #twitter-widget-1 {
       margin: 0 auto !important;
     }
     a {
       color: #65B19D;
     }
     a:hover {
      opacity: 0.5;
     }
     blockquote {
       border-left: 5px solid #cccccc;
       padding-left: 10px;
     }
     h1 span {
       font-size: 2.5rem !important;
     }

     h2 span {
       font-size: 2rem !important;
     }

     h3 span {
       font-size: 1.75rem !important;
     }

     h4 span {
       font-size: 1.375rem !important;
     } span

     h5 span {
       font-size: 1.25rem !important;
     }

     h6 span {
       font-size: 1rem !important;
     }
     @media (max-width: 600px) {
      img {
          width: 100% !important;
      }
     }
   }
 }

#share_box {
  text-align: center;
  p {
    padding: 0 0 1em 0;
    margin: 0;
    font-weight: 700;
    text-transform: uppercase;
    color: #424653;
    font-size: .8em;
  }
  i {
    color: #424653;
    padding: 1em 1.5em;
    &:hover {
      color: #65B19D;
      cursor: pointer;
    }
  }
}

#admin_links {
  border-top: 1px solid #E9E9E9;
  border-bottom: 1px solid #E9E9E9;
  text-align: center;
  padding: 1em 0;
  margin: 1em 0;
  margin-top: 0;
  a {
    text-decoration: none;
    color: #9a9da4;
    margin: 0 1em;
    font-weight: 700;
    font-size: .8em;
    text-transform: uppercase;
    font-family: inherit;
    &:hover {
      color: #65B19D;
    }
  }

}

.category_title_trending {
  opacity: 0.8;
  transition: opacity 0.8s;
  &:hover {
    text-decoration: none;
    color: inherit;
    opacity: 0.55;
    transition: opacity 0.8s;
  }
}

// --------------- Pagination

@media (max-width: 830px) {
  .authors {
    display: inline-block !important;
    .second_author {
      margin-top: 5px;
    }
  }
}

@media (max-width: 800px) {
    .skinny {
      iframe { width: 100% !important }
      #post_title_show {
        padding: 1px 20px;
        margin-bottom: 10px;
        h1 {
          font-size: 35px !important;
        }
      }
    }

    #content, .post_apply, .share_article_feedback {
      padding: 0 20px !important;
    }
}

@media(max-width: 435px) {
  .second_author {
    margin-top: 0 !important;
  }
}

@media(min-width: 1075px) and (max-width: 1240px) {
  .authors {
    display: inline-block !important;
    .second_author {
      margin-top: 5px;
    }
  }
}

@media (max-width: 448px) {
    .skinny {
      max-width: 90%;
      margin: 0 auto !important;
      #post_title_show {
        padding: 0px 15px;
        h1 {
          padding-top: 20px;
        }
      }
    }
    #content {
      padding: 0 15px;
      p {
        font-size: 1em;
      }
    }
}

